fixed wrapping of username in user info box (css)

--- a/assets/sass/junction/_base.scss
+++ b/assets/sass/junction/_base.scss
@@ -6,7 +6,7 @@
 }
 
 .player-name {
-  color: #7154c8;
+  color: #7154c8 !important;
 }
 
 html, body {
