--- a/assets/sass/junction/_user-info-box.scss
+++ b/assets/sass/junction/_user-info-box.scss
@@ -99,6 +99,7 @@
   .user-description {
     padding: 5px;
     overflow-wrap: break-word;
+    word-wrap: break-word;
   }
 
   .date {
